# findociq

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/eval/: eval_questions.example.json  eval_questions.json
demo/hf_space/: Dockerfile  README.md  app.py  requirements.txt
docs/: PROJECT_REPORT.md
results/: eval_results.json  lane_rankings.json  metrics_extended.json
scripts/: analyze_eval.py  evaluate.py  ingest.py
src/findociq/: __init__.py  config.py
src/findociq/api/: main.py
src/findociq/evaluation/: evaluate.py
src/findociq/generation/: vlm_client.py
src/findociq/indexing/: text_embedder.py  vector_store.py  visual_embedder.py
src/findociq/ingestion/: pdf_processor.py
src/findociq/retrieval/: hybrid_retriever.py
ui/: app.py
