[project]
name = "findociq"
version = "0.1.0"
description = "Multimodal financial document intelligence - ColQwen2.5 visual RAG with hybrid retrieval and VLM generation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pypdfium2>=4.30",
    "pillow>=10.3",
    "torch>=2.3",
    "colpali-engine>=0.3.8",
    "sentence-transformers>=3.0",
    "qdrant-client>=1.12",
    "google-genai>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "streamlit>=1.36",
    "requests>=2.32",
    "tqdm>=4.66",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.50"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]
